# TOEditor

./: .cursorrules  Cargo.toml  README.md  build.rs
i18n/: ru.json
i18n/en/LC_MESSAGES/: toeditor.po
i18n/ru/LC_MESSAGES/: toeditor.po
src/: app.rs  config.rs  i18n.rs  lib.rs  main.rs
src/app/: dialogs.rs  mod.rs  translations.rs
src/app/editors/: branch_categories.rs  branches.rs  formation_levels.rs  mod.rs
src/db/: mod.rs
src/db/repositories/: branch_category_repo.rs  branch_repo.rs  formation_level_repo.rs  library_repo.rs  mod.rs  unit_repo.rs  version_repo.rs
src/export/: branch_formation_io.rs  csv.rs  json.rs  mod.rs  svg.rs
src/import/: mod.rs
src/models/: branch.rs  formation_level.rs  library.rs  mod.rs  prelude.rs  validation.rs  version.rs
src/services/: library_service.rs  mod.rs
tests/: config_comprehensive_tests.rs  config_tests.rs  export_edge_cases_tests.rs  i18n_comprehensive_tests.rs  import_edge_cases_tests.rs  library_repo_delete_tests.rs  library_service_delete_tests.rs  menu_tests.rs  models_comprehensive_tests.rs  unit_repo_tests.rs  version_repo_tests.rs
ui/: context_menu.slint  dialogs.slint  editors.slint  main_window.slint  org_chart.slint  theme.slint  unit_table.slint
